# university-works

./: README.md
2sem_pr_png_proc/: Chetvertnaya_Varvara_cw.doc  diff_card.c
2sem_pr_png_proc/src/: Makefile  main.c
2sem_pr_png_proc/src/src/: arguments.c  arguments.h  drawing.c  drawing.h  errors.h  help.c  help.h  picture.c  picture.h  process.c  process.h
3sem_oop_game/lb1/: lb1_report.doc
3sem_oop_game/lb2/: lb2_report.doc
3sem_oop_game/lb3/: lb3_report.doc
3sem_oop_game/src/: CMakeLists.txt  main.cpp
3sem_oop_game/src/classes/: game.cpp  gameManager.cpp
3sem_oop_game/src/gui/: gameGUI.cpp
3sem_oop_game/src/gui_headers/: gameGUI.hpp
3sem_oop_game/src/headers/: game.hpp  gameManager.hpp  saveManager.hpp
